Commit do Pedrozo - Backup

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,46 @@ dist.jar=${dist.dir}/apolo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.8.2.jar=BibliotecasJasper1704\\commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=BibliotecasJasper1704\\commons-collections-3.2.1.jar
+file.reference.commons-digester-1.7.jar=BibliotecasJasper1704\\commons-digester-1.7.jar
+file.reference.commons-logging-1.1.jar=BibliotecasJasper1704\\commons-logging-1.1.jar
+file.reference.commons-report-1.8.2.jar=BibliotecasJasper1704\\commons-report-1.8.2.jar
+file.reference.controlsfx-8.40.15.jar=BibliotecasJasper1704\\controlsfx-8.40.15.jar
+file.reference.groovy-all-1.7.5.jar=BibliotecasJasper1704\\groovy-all-1.7.5.jar
+file.reference.itext-2.1.7.jar=BibliotecasJasper1704\\itext-2.1.7.jar
+file.reference.jasperreports-5.6.0.jar=BibliotecasJasper1704\\jasperreports-5.6.0.jar
+file.reference.jasperreports-applet-5.6.0.jar=BibliotecasJasper1704\\jasperreports-applet-5.6.0.jar
+file.reference.jasperreports-fonts-5.6.0.jar=BibliotecasJasper1704\\jasperreports-fonts-5.6.0.jar
+file.reference.jasperreports-functions-5.6.0.jar=BibliotecasJasper1704\\jasperreports-functions-5.6.0.jar
+file.reference.jasperreports-javaflow-5.6.0.jar=BibliotecasJasper1704\\jasperreports-javaflow-5.6.0.jar
+file.reference.jmetro-5.4.jar=BibliotecasJasper1704\\jmetro-5.4.jar
+file.reference.joda-time-2.4-javadoc.jar=BibliotecasJasper1704\\joda-time-2.4-javadoc.jar
+file.reference.joda-time-2.4-sources.jar=BibliotecasJasper1704\\joda-time-2.4-sources.jar
+file.reference.joda-time-2.4.jar=BibliotecasJasper1704\\joda-time-2.4.jar
 file.reference.mysql-connector-java-5.1.47.zip=C:\\Users\\tonyw\\Downloads\\mysql-connector-java-5.1.47.zip
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.47.zip}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.commons-report-1.8.2.jar}:\
+    ${file.reference.groovy-all-1.7.5.jar}:\
+    ${file.reference.itext-2.1.7.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${file.reference.jasperreports-applet-5.6.0.jar}:\
+    ${file.reference.jasperreports-fonts-5.6.0.jar}:\
+    ${file.reference.jasperreports-functions-5.6.0.jar}:\
+    ${file.reference.jasperreports-javaflow-5.6.0.jar}:\
+    ${file.reference.joda-time-2.4-javadoc.jar}:\
+    ${file.reference.joda-time-2.4-sources.jar}:\
+    ${file.reference.joda-time-2.4.jar}:\
+    ${file.reference.controlsfx-8.40.15.jar}:\
+    ${file.reference.jmetro-5.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
